# multi-server-manager

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
assets/: title-icon.icns
backend/: connections.py  system.py
manager/database/: manager.py
manager/database/sql/: connections.py
manager/state/: manager.py
ui/components/: connection_items.py  dashboard.py  help.py  terminal.py
ui/pages/: connection_list.py  create_connection.py  dashboard.py  root.py  update_connection.py
ui/stylesheets/: app_global.py  fonts.py  toolbar.py
