[tool.poetry]
name = "server-manager"
version = "0.1.0"
description = ""
authors = ["J-Hoplin <hoplin.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "^5.15.11"
pre-commit = "^4.1.0"
paramiko = "^3.5.0"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
